Fix wrapping nav bar in CSS

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,7 +5,21 @@ body {
 	background: black;
 }
 
+div.wrapper {
+	display: flex;
+}
+
+div.nav-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: right;
+	justify-content: right;
+	padding-left: 78%;
+}
+
 nav.links {
+	display: block;
+
 	a:link, a:visited {
 		color: white;
 		text-decoration: none;
@@ -23,18 +37,13 @@ nav.links {
 	a {
 		display: block;
 		text-decoration: none;
-		padding-top: 10px;
-		padding-left: 76.5%;
+		margin-top: 10px;	
 	}
-}
-
-div.wrapper {
-	display: flex;
 }
 
 div.side-div {
 	a.avatar {
-		padding-left: 75%;
+		display: block;
 	}
 
 	background: black;
